--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,8 +1,9 @@
 .card{
    color: black;
-   width: auto;
+   display:inline-block ;
    position: relative;
    margin: .5rem;
+   margin-top: 3%;
    transition: all 300ms;
    border-radius: 2rem;
    min-width: 14rem;
@@ -14,8 +15,7 @@
    width: 100%;
    height: auto;
    background: radial-gradient(rgba(81, 150, 110, 0.461), rgba(0, 0, 0, 0));
-   padding: .2rem;
-   margin-top: -10rem;
+   margin-top: -10.2rem;
    transition: all 400ms cubic-bezier(0.5, 0, 0, 1);
 }
 .card:hover .back{
@@ -39,7 +39,7 @@
    transition: all 400ms cubic-bezier(0.5, 0, 0, 1);
 }
 .card:hover .front{
-   margin-top: -1rem;
+   margin-top: 0rem;
    border-radius: 2rem 2rem 2rem 2rem;
 }
 .card:hover .front > img{
@@ -58,9 +58,9 @@
 }
 
 .name{
-   font-size: 1.2rem;
+   font-size: 1.6rem;
    height: 2rem;
-   margin-top: .5rem;
+   margin-top: .4rem;
    display: flex;
    justify-content: center;
    overflow: hidden;
@@ -76,9 +76,9 @@
 .species{
    display: center;
    flex-direction: column;
-   margin-top: -1.4rem;
-   font-size: .4rem;
-   height: 12rem;
+   margin-top: -1.2rem;
+   font-size: .3rem;
+   height: 11.5rem;
    align-items: center;
    justify-content: center;
 }
@@ -86,14 +86,15 @@
 .btn{
    display:flex;
    justify-content:center;
-   margin-top: -7rem;
+   margin-top: -6.6rem;
 }
 
 .btn button{
    margin-left: 1rem;
    border-radius: 5rem;
-   margin-top: .5rem;
-   width: 3rem;
+   margin-top: 0.5rem;
+   margin-bottom: 0.5rem;
+   width: 4rem;
    height: 2rem;
    background: linear-gradient(rgba(81, 150, 110, 0.461), rgba(0, 0, 0, 0));
    border: transparent;
