--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -2,14 +2,13 @@
     display: flex;
     justify-content: center;
     border-radius: 999999rem;
-    height: 2.8rem;
-    /* box-shadow: 0 0 .2rem rgba(81, 255, 110, 0.461), 0 0 .2rem rgba(81, 255, 110, 0.461), 0 0 2rem rgba(81, 255, 110, 0.461); */
+    height: 2.4rem;
     background-color: transparent;
 }
 
 .btns{
     display: flex;
-    margin-right: 5rem;
+    margin-right: -6rem;
     align-items: center;
     gap: 3rem;
 }
@@ -85,3 +84,21 @@
     width: 100%;
     margin-top: 1rem;
 }
+    
+    .btns {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    }
+    
+    .btns a {
+    color: green; 
+    font-size: 18px;
+    text-decoration: none;
+    margin: 0 10px;
+    }
+    
+    .btns a:hover {
+    color: white; 
+    }
