--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,13 +1,15 @@
 .container{
     display: flex;
     align-items: center;
+    margin-left: 52%;
 }
 
 .search{
     background-color: rgb(0, 0, 0);
     border-radius: 20rem;
-    width: 15rem;
+    width: 10rem;
     height: 1.5rem;
+    margin-top: 5%;
     border: transparent;
     color: white;
     
@@ -22,7 +24,6 @@
 }
 
 .search:hover{
-    /* background-color: rgba(81, 255, 110, 0.461); */
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.461), 0 0 4rem rgba(81, 255, 110, 0.461), 0 0 8rem rgba(81, 255, 110, 0.461);
 }
 
@@ -30,15 +31,37 @@
     margin-left: 1rem;
     border-radius: 5rem;
     margin-top: .5rem;
-    width: 5rem;
-    height: 2.2rem;
+    width: 3.2rem;
+    height: 1.6rem;
     background: linear-gradient(rgba(26, 29, 27, 0.461), rgba(0, 0, 0, 0));
     border: transparent;
     font-weight: 800;
     margin-bottom: .5rem;
-
     overflow: hidden;
     transition: 300ms;
+    animation: glowing4 2s linear infinite;
+}
+
+@keyframes glowing4 {
+  0% {
+    box-shadow: 0 0 5px white;
+  }
+
+  25% {
+    box-shadow: 0 0 20px white;
+  }
+
+  50% {
+    box-shadow: 0 0 25px white;
+  }
+
+  75% {
+    box-shadow: 0 0 20px white;
+  }
+
+  100% {
+    box-shadow: 0 0 5px white;
+  }
 }
 
 .container button:hover{
@@ -48,3 +71,94 @@
     background-color: #33ff0044;
     box-shadow: 0 0 1rem #0000009b, 0 0 4rem #33ff009b, 0 0 8rem #0000009b;
 }
+
+.container {
+    background: rgb(47, 61, 48);
+    cursor: pointer;
+    border: none;
+    padding: 6px 12px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    position:relative;
+    top: 35%;
+    border-radius: 12px;
+  }
+
+  .container::before{
+    content: "";  
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      45deg,
+     rgb(38, 48, 36), rgb(48, 76, 48), rgb(50, 116, 50),
+      rgb(28, 152, 28), rgb(4, 250, 4), rgb(82, 254, 2)
+    );
+    background-size: 800%;
+    border-radius: 10px;
+    filter: blur(8px);
+    animation: glowing 6s linear infinite;
+  }
+
+  @keyframes glowing {
+    0% {
+      background-position: 0 0;
+    }
+
+    50% {
+      background-position: 400% 0;
+    }
+
+    100% {
+      background-position: 0 0;
+    }
+  }
+
+  .agregar {
+    background: rgb(151, 179, 153);
+    cursor: pointer;
+    border: none;
+    padding: .1px .1px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    position:relative;
+    border-radius: 12px;
+  }
+
+  .agregar::before{
+    content: "";  
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      45deg,
+     rgb(38, 48, 36), rgb(48, 76, 48), rgb(50, 116, 50),
+      rgb(28, 152, 28), rgb(4, 250, 4), rgb(82, 254, 2)
+    );
+    background-size: 800%;
+    border-radius: 10px;
+    filter: blur(8px);
+    animation: glowing 6s linear infinite;
+  }
+
+  @keyframes glowing {
+    0% {
+      background-position: 0 0;
+    }
+
+    50% {
+      background-position: 400% 0;
+    }
+
+    100% {
+      background-position: 0 0;
+    }
+  }
