--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -115,3 +115,15 @@
    background-color: rgba(81, 255, 110, 0.461);
    box-shadow: 0 0 1rem rgba(81, 255, 110, 0.461), 0 0 4rem rgba(81, 180, 110, 0.461), 0 0 8rem rgba(81, 180, 110, 0.461);
 }
+
+.card button {
+   background-color: transparent;
+   border: none;
+   font-size: 1.5rem;
+   cursor: pointer;
+   transition: transform 0.2s ease-in-out;
+}
+
+.card button:hover {
+   transform: scale(1.4);
+}
