--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -8,7 +8,7 @@
 
 .btns{
     display: flex;
-    margin-right: -6rem;
+    margin-right: -16rem;
     align-items: center;
     gap: 3rem;
 }
@@ -90,6 +90,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    font-weight: bolder ;
+    margin-top: 1%;
     }
     
     .btns a {
@@ -101,4 +103,61 @@
     
     .btns a:hover {
     color: white; 
+    cursor: pointer;
+    transform: scale(1.1);
     }
+
+    
+
+    .btn {
+        background: black;
+        cursor: pointer;
+        border: none;
+        margin-right: -4%;
+        padding: 1px 6px;
+        color: #66cb72;
+        font-size: 10px;
+        font-weight: bold;
+        position: relative;
+        left: 1%;
+        top: 34%;
+        border-radius: 12px;
+      }
+    
+      .btn::before{
+        content: "";  
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          45deg,
+         rgb(38, 48, 36), rgb(48, 76, 48), rgb(50, 116, 50),
+          rgb(28, 152, 28), rgb(4, 250, 4), rgb(82, 254, 2)
+        );
+        background-size: 800%;
+        border-radius: 10px;
+        filter: blur(8px);
+        animation: glowing9 5s linear infinite;
+      }
+    
+      @keyframes glowing9 {
+        0% {
+          background-position: 0 0;
+        }
+    
+        50% {
+          background-position: 400% 0;
+        }
+    
+        100% {
+          background-position: 0 0;
+        }
+      }
+
+      .btn:hover{
+        cursor: pointer;
+        transform: scale(1.2);
+      }
