--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,7 +1,18 @@
 .container{
     display: flex;
     align-items: center;
-    margin-left: 52%;
+    margin-left: 80%;
+    background: rgb(47, 61, 48);
+    cursor: pointer;
+    border: none;
+    padding: 6px 12px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    position:relative;
+    top: 35%;
+    right: 28%;
+    border-radius: 12px;
 }
 
 .search{
@@ -71,19 +82,6 @@
     background-color: #33ff0044;
     box-shadow: 0 0 1rem #0000009b, 0 0 4rem #33ff009b, 0 0 8rem #0000009b;
 }
-
-.container {
-    background: rgb(47, 61, 48);
-    cursor: pointer;
-    border: none;
-    padding: 6px 12px;
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    position:relative;
-    top: 35%;
-    border-radius: 12px;
-  }
 
   .container::before{
     content: "";  
@@ -161,4 +159,11 @@
     100% {
       background-position: 0 0;
     }
+  }
+
+  .search::placeholder{
+    color: white;
+    font-size: 6px;
+    font-weight: bold;
+    padding-top: 5px;
   }
